AM_CXXFLAGS = -I${srcdir}/include -I$(top_srcdir)/include -I../deps/include -I.
AM_LDFLAGS = -L. -L../deps/lib

#noinst_LIBRARIES = libapp_main.a
#libapp_main_a_SOURCES = src/app_main.cc

bin_PROGRAMS = cereal_app
cereal_app_SOURCES = src/app_main.cc
#generic_microservice_LDADD = -lgeneric_microservice
#generic_microservice_LDADD += -ledge
#generic_microservice_LDADD += -lzmq